--- a/inner.html
+++ b/inner.html
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="hotel-rating">
-          <p class="hotel-rating-img"></p>
+          <p class="hotel-rating-img" aria-label="Рейтинг 4 звезды"></p>
           <!-- <img src="img/star.svg" alt="Звездочки" width="90" height="17">-->
           <p class="hotel-rating-text">Рейтинг: 8,5</p>
         </div>
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="hotel-rating">
-          <p class="hotel-rating-img"></p>
+          <p class="hotel-rating-img" aria-label="Рейтинг 3 звезды"></p>
           <p class="hotel-rating-text">Рейтинг: 8,9</p>
         </div>
       </li>
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="hotel-rating">
-          <p class="hotel-rating-img"></p>
+          <p class="hotel-rating-img" aria-label="Рейтинг 2 звезды"></p>
           <p class="hotel-rating-text">Рейтинг: 9,2</p>
         </div>
       </li>
@@ -235,6 +235,7 @@
       </div>
     </footer>
   </div>
+
 </body>
 
 </html>
