--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           <a href="inner.html">Гостиницы</a>
         </li>
       </ul>
-      <div class="main-logo">
+      
         <a href="index.html" class="main-logo">
           <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
         </a>
-      </div>
+      
     </nav>
     <main>
       <header class="main-header">
@@ -173,7 +173,7 @@
       <p class="footer-hashtag footer-item">#Visitsedona</p>
       <ul class="social-btn-list footer-item">
         <li>
-          <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">
+          <a href="#" class="social-btn" aria-label="Твиттер">
             <span class="visually-hidden">Twitter</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18" height="16" viewBox="0 0 17 15">
               <path fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 
@@ -184,7 +184,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">
+          <a href="#" class="social-btn" aria-label="Фейсбук">
             <span class="visually-hidden">Facebook</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
               <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
@@ -192,7 +192,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">
+          <a href="#" class="social-btn" aria-label="Ютьюб">
             <span class="visually-hidden">Youtube</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
               <path fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"
