--- a/inner.html
+++ b/inner.html
@@ -23,7 +23,7 @@
           <a href="#">Карта штата</a>
         </li>
         <li>
-          <a class="active">Гостиницы</a>
+          <a class="site-navigation-active">Гостиницы</a>
         </li>
       </ul>
       <div class="main-logo">
@@ -71,7 +71,7 @@
       </div>
       <div class="filter-search-price">
         <div class="filter-search-price-title">
-          <label for="price-one-night">Стоимость в сутки (Р):</label>
+          Стоимость в сутки (Р):
         </div>
         <div class="filter-search-price-controls">
           <label class="min-price" for="min-price">от
@@ -195,18 +195,18 @@
       <p class="footer-hashtag footer-item">#Visitsedona</p>
       <ul class="social-btn-list footer-item">
         <li>
-          <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">
+          <a href="#" class="social-btn" aria-label="Твиттер">
             <span class="visually-hidden">Twitter</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="18" height="16" viewBox="0 0 17 15">
               <path fill="#FFF" d="M10.95.144c1.685-.496 2.984.27 3.577 1.179.673-.231 1.331-.481 2.011-.708a2.345 2.345 0 0 1-.857 1.768c.685.17 
                 1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 
                 2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 
                 1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"
-              />
+              /></svg>
           </a>
         </li>
         <li>
-          <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">
+          <a href="#" class="social-btn" aria-label="Фейсбук">
             <span class="visually-hidden">Facebook</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
               <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
@@ -214,7 +214,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">
+          <a href="#" class="social-btn" aria-label="Ютьюб">
             <span class="visually-hidden">Youtube</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16" viewBox="0 0 20 16">
               <path fill="#FFF" d="M17 0H3C1.35 0 0 1.35 0 3v10c0 1.65 1.35 3 3 3h14c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zM6.027 11.998V4.002L15.014 8l-8.987 3.998z"
