--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           <a href="inner.html">Гостиницы</a>
         </li>
       </ul>
-      
-        <a href="index.html" class="main-logo">
-          <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
-        </a>
-      
+
+      <a href="index.html" class="main-logo">
+        <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
+      </a>
+
     </nav>
     <main>
       <header class="main-header">
@@ -110,7 +110,7 @@
             <form action="https://echo.htmlacademy.ru" class="searching-form">
               <p class="searching-form-date">
                 <label for="searching-form-check-in">Дата заезда:</label>
-                <input class="searching-form-check-in" type="text" name="date" id="searching-form-check-in" placeholder="24 апреля 2017">
+                <input class="searching-form-check-in searching-form-input" type="text" name="date" id="searching-form-check-in" placeholder="24 апреля 2017">
                 <button class="searching-form-calendar" aria-label="Календарь">
                   <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                     <path fill="#cacaca" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"
@@ -122,7 +122,7 @@
               </p>
               <p class="searching-form-date">
                 <label for="searching-form-check-out">Дата выезда:</label>
-                <input class="searching-form-check-out" type="text" name="date" id="searching-form-check-out" placeholder="4 июля 2017">
+                <input class="searching-form-check-out searching-form-input" type="text" name="date" id="searching-form-check-out" placeholder="4 июля 2017">
                 <button class="searching-form-calendar" aria-label="Календарь">
                   <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                     <path fill="#cacaca" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"
@@ -139,7 +139,7 @@
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
                   </svg>
                 </button>
-                <input class="adults-quantity-input" type="text" name="quantity" id="adults-quantity" placeholder="2">
+                <input class="adults-quantity-input searching-form-input" type="text" name="quantity" id="adults-quantity" placeholder="2">
                 <button class="btn-next" type="button" aria-label="Увеличить">
                   <svg width="15" height="15">
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
@@ -152,7 +152,7 @@
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
                   </svg>
                 </button>
-                <input type="text" name="quantity" id="children-quantity" placeholder="0">
+                <input type="text" class="searching-form-input" name="quantity" id="children-quantity" placeholder="0">
                 <button class="btn-next" type="button" aria-label="Увеличить">
                   <svg width="15" height="15">
                     <line x1="1" y1="9" x2="13" y2="9" stroke="#a9a9a9" stroke-width="3" />
@@ -180,7 +180,8 @@
               1.304-.491 1.304-.491-.169 1-1.006 1.788-1.563 2.024-.231 6.75-3.175 11.217-10.077 11.082h-.446c-.41 0-4.164-.46-4.898-1.887 
               2.271.196 3.893-.422 4.693-1.177-.96-.3-2.679-.477-2.979-2.95.349.106.564.228 1.19.119C1.705 8.247.374 7.53.448 5.33c.285.328 
               1.067.536 1.34.472C1.085 5.561-.182 2.442.894.85c1.818 1.854 3.735 3.606 7.152 3.773C8.254 2.33 9.183.793 10.95.144z"
-              /></svg>
+              />
+            </svg>
           </a>
         </li>
         <li>
@@ -214,6 +215,8 @@
     </footer>
   </div>
   <script src="js/script.js">
+
+
   </script>
 </body>
 
