--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
@@ -8,7 +7,6 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
   <div class="content">
     <nav class="main-navigation">
@@ -212,10 +210,6 @@
       </div>
     </footer>
   </div>
-  <script src="js/script.js">
-
-
-  </script>
+  <script src="js/script.js"></script>
 </body>
-
 </html>
