Исправления по финальной проверки

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="inner.html">Гостиницы</a>
         </li>
       </ul>
-      <a href="index.html" class="main-logo">
+      <a class="main-logo">
         <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
       </a>
     </nav>
