--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </section>
       <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.18050597293!2d-111.83015797774877!3d34.85437338103787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sdk!4v1522868243926"
-          width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+          width="1200" height="593" style="border:0" allowfullscreen></iframe>
         <p>
           <img src="img/map_full.png" alt="Карта Седоны" width="1200" height="593">
         </p>
